--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 									</li>
 									<li class="nav-item">
 										<a class="page-scroll" href="#contact" style="text-align : center">Devenir
-											Partenaire</a>
+											Vendeur</a>
 									</li>
 								</ul>
 							</div>
@@ -117,11 +117,14 @@
 			<div class="row align-items-center">
 				<div class="col-sm-10">
 					<div class="hero-content">
-						<h1 class="wow fadeInUp" data-wow-delay=".2s">Tell US <span> Your goal</span> </h1>
+						<p>
+							<h3 class="wow fadeInUp" data-wow-delay=".2s">Développez votre commerce en ligne avec
+								<span style="color: #19CEEB;"> BlueSide</span> </h3>
+						</p>
 						<p class="wow fadeInUp" data-wow-delay=".4s">
-							Lorem Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							laudantium
-
+							BlueSide Corp est une entreprise de e-commerce immatriculé au registre du commerce sous le
+							N°: RCCM RB/COT/21A 69268. La société offre sa plateforme e-commerce ‘BlueSide’ à tous
+							commerçants désireux de vendre leurs produits en ligne et se faire plus d’argent.
 						</p>
 						<div class="download-btns">
 							<div class="">
@@ -163,11 +166,11 @@
 													src="https://image.freepik.com/free-photo/spaghetti-with-carbonara-sauce_1216-324.jpg"
 													alt="">
 												<div class="item-details">
-													<h5 style="text-align: center;color:white">lorem </h5>
-													<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-														Pariatur, cumque placeat in veritatis quas labore tempora
-														inventore voluptates minima repellendus voluptatem neque
-														cupiditate sit dolores voluptatibus odio nisi harum aperiam.</p>
+													<h5 style="text-align: center;color:white">Plateforme sécurisé </h5>
+													<p style="text-align: center;">Nous vous offrons une plateforme
+														rapide, efficace et sécurisée
+														où vous pouvez développer votre activité grâce à une série
+														d'outils conçus pour vous.</p>
 												</div>
 											</div>
 										</div>
@@ -179,11 +182,10 @@
 													src="https://image.freepik.com/free-photo/dishes-with-healthy-waffles_1220-367.jpg"
 													alt="">
 												<div class="item-details">
-													<h5 style="text-align: center;color:white">lorem</h5>
-													<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-														enim dolores laboriosam quisquam, necessitatibus modi provident
-														tempora repudiandae quaerat esse architecto consequatur, at nam
-														eligendi nihil eos ex velit vero.</p>
+													<h5 style="text-align: center;color:white">MARKETING & IT</h5>
+													<p style="text-align: center;">Bénéficiez de l’expertise en service
+														IT et en Marketing de notre équipe qui vous
+														accompagnera tout au long de votre partenariat avec nous.</p>
 												</div>
 											</div>
 										</div>
@@ -195,11 +197,10 @@
 													src="https://image.freepik.com/free-photo/top-view-of-tasty-noodles-with-prawns_1203-1769.jpg"
 													alt="">
 												<div class="item-details">
-													<h5 style="text-align: center;color:white">Lorem</h5>
-													<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor,
-														quaerat tenetur? Cupiditate architecto nesciunt numquam incidunt
-														sint tempora, porro commodi quas mollitia? Suscipit aliquid eos
-														architecto laudantium tenetur officia rem!</p>
+													<h5 style="text-align: center;color:white">Stockage</h5>
+													<p style="text-align: center;">Nous vous offrons la possibilité de
+														stocker vos produits avec nous afin de faciliter la livraison
+													</p>
 												</div>
 											</div>
 										</div>
@@ -207,15 +208,14 @@
 										<!--TESTIMONIAL 4 -->
 										<div class="item">
 											<div class="shadow-effect">
-												<img class="img-responsive"
-													src="https://image.freepik.com/free-photo/burguer-with-garnish_1088-72.jpg"
+
+												<img class="img-responsive" src="assets/img/delivery/3333449.jpg"
 													alt="">
 												<div class="item-details">
-													<h5 style="text-align: center;color:white">lorem</h5>
-													<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-														Pariatur sit eveniet autem laborum hic eaque vel exercitationem
-														non soluta fuga odio necessitatibus velit accusantium, ex quidem
-														ratione nobis tenetur iste.</p>
+													<h5 style="text-align: center;color:white">Livraison sécurisé </h5>
+													<p style="text-align: center;">Nous nous occupons de la livraisons
+														et votre produit est traité avec sécurité du point de chargement
+														jusqu’à destination finale</p>
 												</div>
 											</div>
 										</div>
@@ -227,12 +227,9 @@
 													src="https://image.freepik.com/free-photo/delicious-pastry-with-chicken_1203-1616.jpg"
 													alt="">
 												<div class="item-details">
-													<h5 style="text-align: center;color:white">lorem</h5>
-													<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-														Pariatur sit eveniet autem laborum hic eaque vel exercitationem
-														non soluta fuga odio necessitatibus velit accusantium, ex quidem
-														ratione nobis tenetur iste.</p>
-
+													<h5 style="text-align: center;color:white">Publicités </h5>
+													<p style="text-align: center;">Possibilité de faire de la publicité
+														payante pour plus de visibilité sur votre produit</p>
 												</div>
 											</div>
 										</div>
@@ -340,14 +337,25 @@
 				<div class="col-lg-5">
 					<div class="delivery-content">
 						<div class="section-title">
-							<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Fast Delivery</span>
-							<h1 class="mb-35 wow fadeInUp" data-wow-delay=".4s">Order Now, Recieve Within 30mins</h1>
-							<p class="mb-35 wow fadeInUp" data-wow-delay=".6s">Lorem ipsum dolor sit amet, consetetur
-								sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore hdht dolore magna
-								aliquyam erat, sed diam voluptua.</p>
-
-							<a href="javscript:void(0)" class="main-btn btn-hover wow fadeInUp" data-wow-delay=".8s"
-								style="background-color:#19CEEB;">Voir le site web </a>
+							<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Pourquoi vendre sur
+								BlueSide ?</span>
+							<p class="mb-35 wow fadeInUp" data-wow-delay=".6s">
+								<ul class="list-group list-group-flush">
+									<li class="list-group-item">Nous vous aidons à vendre vos produits plus rapidement
+										grâce à la forte visibilité sur notre site</li>
+									<li class="list-group-item">Premier site de e-commerce au Bénin qui vous garantie
+										des services de qualités</li>
+									<li class="list-group-item">Ayez accès à votre propre compte vendeur avec la
+										possibilité de personnaliser gratuitement votre catalogue de produits en ligne
+									</li>
+									<li class="list-group-item">Vous avez la liberté de mettre votre meilleur prix sur
+										vos produits</li>
+									<li class="list-group-item">Les consommateurs béninois effectuent de plus en plus
+										leur achat en ligne</li>
+									<li class="list-group-item">Surpassez vos concurrents en marquant votre présence sur
+										un grand marché en ligne et augmentez votre chiffre d’affairevotre écoute</li>
+								</ul>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -391,15 +399,50 @@
 				<div class="col-lg-5">
 					<div class="delivery-content">
 						<div class="section-title">
-							<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Comment utiliser
-								l'Application?</span>
-							<h1 class="mb-35 wow fadeInUp" data-wow-delay=".4s">Order Now, Recieve Within 30mins</h1>
-							<p class="mb-35 wow fadeInUp" data-wow-delay=".6s">Lorem ipsum dolor sit amet, consetetur
-								sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore hdht dolore magna
-								aliquyam erat, sed diam voluptua.</p>
-
-							<a href="#contact" class="main-btn btn-hover wow fadeInUp" data-wow-delay=".8s"
-								style="background-color:#19CEEB;">Devenir partenaire </a>
+							<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Comment ca marche ?</span>
+							<p class="mb-35 wow fadeInUp" data-wow-delay=".6s">
+								<p><span class="wow fadeInUp"   data-wow-delay=".2s" style="color:#19CEEB;">Inscription </span></p>
+								Inscrivez-vous gratuitement et créez votre compte vendeur, cela ne prend que quelques minutes. Le compte vous donne accès aux différentes fonctionnalités de votre espace gestionnaire.
+								<ul class="list-group list-group-flush">
+									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Mise en ligne d'un produit</span>
+									<li class="list-group-item d-flex justify-content-between align-items-center">
+										À partir de votre compte vendeur, Insérez vos produits dans les catégories qui les correspondent le mieux										
+										<span class="badge badge-primary badge-pill"><input type="checkbox" disabled id="scales" name="scales"
+											checked></span>
+									</li>
+									<li class="list-group-item d-flex justify-content-between align-items-center">
+										Ajoutez les images et les descriptions de vos produits										
+										<span class="badge badge-primary badge-pill"><input type="checkbox" disabled id="scales" name="scales"
+											checked></span>
+									</li>
+									<li class="list-group-item d-flex justify-content-between align-items-center">
+										Plus votre offre est attirante, plus vous vendez vite										
+										<span class="badge badge-primary badge-pill"><input type="checkbox" disabled id="scales" name="scales"
+											checked></span>
+									</li>
+								</ul>
+								<ul class="list-group list-group-flush">
+									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Notification</span>
+									<p>
+										Vous serez notifiez à chaque commande sur votre compte vendeur ou par mail Livraison 									
+									</p>
+								</ul>
+								<ul class="list-group list-group-flush">
+									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Livraison</span>
+									<p>
+										Nous nous occupons de l’emballage et de la livraison vers le client									
+									</p>
+								</ul>
+								<ul class="list-group list-group-flush">
+									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Mode de Paiement </span>
+									<p>
+										Recevez votre capitale chaque semaine ou chaque mois simplement en demandant un versement par le biais de votre compte vendeur sur votre compte mobile money ou par transfert bancaire								</ul>
+								<ul class="">								
+									<p><a href="#contact" class="main-btn btn-hover wow fadeInUp"  type="button" data-wow-delay=".8s"
+										style="background-color:#19CEEB;">Devenir partenaire </a></p>
+								</ul>
+							</p>
+			
 						</div>
 					</div>
 				</div>
@@ -432,7 +475,7 @@
 							</div>
 						</div>
 						<div class="member-info">
-							<h4>Walter White</h4>
+							<h4>Geoffroy.D SAÏZONOU</h4>
 							<span>Chief Executive Officer</span>
 						</div>
 					</div>
@@ -450,7 +493,7 @@
 							</div>
 						</div>
 						<div class="member-info">
-							<h4>Sarah Jhonson</h4>
+							<h4> Diel FAMBI</h4>
 							<span>Product Manager</span>
 						</div>
 					</div>
@@ -468,7 +511,7 @@
 							</div>
 						</div>
 						<div class="member-info">
-							<h4>William Anderson</h4>
+							<h4>Farid A. Abdel YESSOUFOU</h4>
 							<span>CTO</span>
 						</div>
 					</div>
@@ -485,8 +528,8 @@
 							</div>
 						</div>
 						<div class="member-info">
-							<h4>Amanda Jepson</h4>
-							<span>Chief Marketing</span>
+							<h4>Shukurath BAKARY</h4>
+							<span>Responsable Marketing</span>
 						</div>
 					</div>
 				</div>
@@ -505,7 +548,7 @@
 					<div class="about-content received-content">
 						<div class="section-title">
 							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Devenir
-								Partenaire</span>
+								vendeur</span>
 							<h5 class="mb-25 wow fadeInUp" data-wow-delay=".4s"> Nous faisons notre maximum pour vous
 								répondre dans les plus brefs délais. Merci de votre patience! </h5>
 							<form method="POST">
@@ -574,7 +617,7 @@
 								<a href="#team">Equipe</a>
 							</li>
 							<li>
-								<a href="#contact">Devenir partenaire</a>
+								<a href="#contact">Devenir vendeur</a>
 							</li>
 						</ul>
 					</div>
@@ -584,13 +627,13 @@
 						<h3>Nos contacts</h3>
 						<ul class="links">
 							<li>
-								<a href="#">Tel:</a>
+								<a href="">Téléphone: (+229)52745610</a>
 							</li>
 							<li>
-								<a href="#">Email:</a>
+								<a href="">Email: </a>
 							</li>
 							<li>
-								<a href="#">Adresse:</a>
+								<a href="">Adresse: Cotonou/BENIN</a>
 							</li>
 						</ul>
 					</div>
@@ -664,10 +707,10 @@
 	</script> -->
 	<!--Start of Tawk.to Script-->
 	<script>
-		(function(d, w, c) {
+		(function (d, w, c) {
 			w.ChatraID = '4qMn5k9rri7JH2W4j';
 			var s = d.createElement('script');
-			w[c] = w[c] || function() {
+			w[c] = w[c] || function () {
 				(w[c].q = w[c].q || []).push(arguments);
 			};
 			s.async = true;
@@ -679,8 +722,9 @@
 		};
 		window.ChatraSetup = {
 			colors: {
-				buttonText: '#f0f0f0', /* couleur du texte du bouton de chat */
-				buttonBg: '#19CEEB'    /* couleur de fond du bouton de chat */
+				buttonText: '#f0f0f0',
+				/* couleur du texte du bouton de chat */
+				buttonBg: '#19CEEB' /* couleur de fond du bouton de chat */
 			}
 		};
 	</script>
@@ -688,5 +732,3 @@
 </body>
 
 </html>
-
-
