--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 						</p>
 						<p class="wow fadeInUp" data-wow-delay=".4s">
 							BlueSide Corp est une entreprise de e-commerce immatriculé au registre du commerce sous le
-							N°: RCCM RB/COT/21A 69268. La société offre sa plateforme e-commerce ‘BlueSide’ à tous
+							<strong>N°: RCCM RB/COT/21A 69268</strong>. La société offre sa plateforme e-commerce <span
+								style="color: #19CEEB;">BlueSide</span> à tous
 							commerçants désireux de vendre leurs produits en ligne et se faire plus d’argent.
 						</p>
 						<div class="download-btns">
@@ -381,12 +382,23 @@
 				<div class="col-lg-6">
 					<div class="about-content received-content">
 						<div class="section-title">
-							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Contactless
-								Delivery</span>
-							<h1 class="mb-25 wow fadeInUp" data-wow-delay=".4s">On-time Delivery to Your Doorstep</h1>
-							<p class="wow fadeInUp" data-wow-delay=".6s">Lorem ipsum dolor sit amet, consetetur
-								sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-								aliquyam erat, sed diam voluptua.</p>
+							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Découvrez nos
+								servies de qualité conçus pour vous !
+							</span>
+							<h1 class="mb-25 wow fadeInUp" data-wow-delay=".4s">Plus de soucis de livraison!</h1>
+							<p class="wow fadeInUp" data-wow-delay=".6s">
+								<ul class="list-group list-group-flush">
+									<li class="list-group-item">Nous livrons vos clients à leur porte.
+									</li>
+									<li class="list-group-item">Profitez de notre service logistique qui s’occupe de la
+										sécurité d’une commande jusqu’à sa destination.
+									</li>
+									<li class="list-group-item">Bénéficiez de notre système GPS qui avec la permission
+										du client, traque sa localisation, ce qui facilitera la livraison rapide des
+										produits.
+							</p>
+							</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -399,50 +411,64 @@
 				<div class="col-lg-5">
 					<div class="delivery-content">
 						<div class="section-title">
-							<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Comment ca marche ?</span>
+							<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Comment ca marche
+								?</span>
 							<p class="mb-35 wow fadeInUp" data-wow-delay=".6s">
-								<p><span class="wow fadeInUp"   data-wow-delay=".2s" style="color:#19CEEB;">Inscription </span></p>
-								Inscrivez-vous gratuitement et créez votre compte vendeur, cela ne prend que quelques minutes. Le compte vous donne accès aux différentes fonctionnalités de votre espace gestionnaire.
+								<p><span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Inscription
+									</span></p>
+								Inscrivez-vous gratuitement et créez votre compte vendeur, cela ne prend que quelques
+								minutes. Le compte vous donne accès aux différentes fonctionnalités de votre espace
+								gestionnaire.
 								<ul class="list-group list-group-flush">
-									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Mise en ligne d'un produit</span>
+									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Mise en ligne
+										d'un produit</span>
 									<li class="list-group-item d-flex justify-content-between align-items-center">
-										À partir de votre compte vendeur, Insérez vos produits dans les catégories qui les correspondent le mieux										
-										<span class="badge badge-primary badge-pill"><input type="checkbox" disabled id="scales" name="scales"
-											checked></span>
+										À partir de votre compte vendeur, Insérez vos produits dans les catégories qui
+										les correspondent le mieux
+										<span class="badge badge-primary badge-pill"><input type="checkbox" disabled
+												id="scales" name="scales" checked></span>
 									</li>
 									<li class="list-group-item d-flex justify-content-between align-items-center">
-										Ajoutez les images et les descriptions de vos produits										
-										<span class="badge badge-primary badge-pill"><input type="checkbox" disabled id="scales" name="scales"
-											checked></span>
+										Ajoutez les images et les descriptions de vos produits
+										<span class="badge badge-primary badge-pill"><input type="checkbox" disabled
+												id="scales" name="scales" checked></span>
 									</li>
 									<li class="list-group-item d-flex justify-content-between align-items-center">
-										Plus votre offre est attirante, plus vous vendez vite										
-										<span class="badge badge-primary badge-pill"><input type="checkbox" disabled id="scales" name="scales"
-											checked></span>
+										Plus votre offre est attirante, plus vous vendez vite
+										<span class="badge badge-primary badge-pill"><input type="checkbox" disabled
+												id="scales" name="scales" checked></span>
 									</li>
 								</ul>
 								<ul class="list-group list-group-flush">
-									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Notification</span>
+									<span class="wow fadeInUp" data-wow-delay=".2s"
+										style="color:#19CEEB;">Notification</span>
 									<p>
-										Vous serez notifiez à chaque commande sur votre compte vendeur ou par mail Livraison 									
+										Vous serez notifiez à chaque commande sur votre compte vendeur ou par mail
+										Livraison
 									</p>
 								</ul>
 								<ul class="list-group list-group-flush">
-									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Livraison</span>
+									<span class="wow fadeInUp" data-wow-delay=".2s"
+										style="color:#19CEEB;">Livraison</span>
 									<p>
-										Nous nous occupons de l’emballage et de la livraison vers le client									
+										Nous nous occupons de l’emballage et de la livraison vers le client
 									</p>
 								</ul>
 								<ul class="list-group list-group-flush">
-									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Mode de Paiement </span>
+									<span class="wow fadeInUp" data-wow-delay=".2s" style="color:#19CEEB;">Mode de
+										Paiement </span>
 									<p>
-										Recevez votre capitale chaque semaine ou chaque mois simplement en demandant un versement par le biais de votre compte vendeur sur votre compte mobile money ou par transfert bancaire								</ul>
-								<ul class="">								
-									<p><a href="#contact" class="main-btn btn-hover wow fadeInUp"  type="button" data-wow-delay=".8s"
-										style="background-color:#19CEEB;">Devenir partenaire </a></p>
+										Recevez votre capitale chaque semaine ou chaque mois simplement en demandant un
+										versement par le biais de votre compte vendeur sur votre compte mobile money ou
+										par transfert bancaire
+								</ul>
+								<ul class="">
+									<p><a href="#contact" class="main-btn btn-hover wow fadeInUp" type="button"
+											data-wow-delay=".8s" style="background-color:#19CEEB;">Devenir partenaire
+										</a></p>
 								</ul>
 							</p>
-			
+
 						</div>
 					</div>
 				</div>
@@ -459,8 +485,8 @@
 
 			<div class="section-title">
 				<h2 style="color:#19CEEB; text-align:center; margin: 25px;"> Équipe dirigeante</h2>
-				<p style="margin:20px;">Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci
-					expedita at voluptas atque vitae autem.</p>
+				<p style="margin:20px; text-align:center">Notre équipe conçue de jeunes dynamiques, stratégiques et
+					déterminés vous accompagne pour une bonne collaboration.</p>
 			</div>
 			<div class="row">
 				<div class="col-lg-3 col-md-6 d-flex align-items-stretch">
@@ -468,10 +494,10 @@
 						<div class="member-img">
 							<img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
 							<div class="social">
-								<a href=""><i class="bi bi-twitter"></i></a>
-								<a href=""><i class="bi bi-facebook"></i></a>
-								<a href=""><i class="bi bi-instagram"></i></a>
-								<a href=""><i class="bi bi-linkedin"></i></a>
+								<a href="https://twitter.com/geo_szn" target="_blank"><i class="bi bi-twitter"></i></a>
+								<a href="https://web.facebook.com/geoffroy.saizonou/" target="_blank"><i class="bi bi-facebook"></i></a>
+								<a href="https://www.instagram.com/geo_szn/" target="_blank"><i class="bi bi-instagram"></i></a>
+								<a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
 							</div>
 						</div>
 						<div class="member-info">
@@ -486,10 +512,10 @@
 						<div class="member-img">
 							<img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
 							<div class="social">
-								<a href=""><i class="bi bi-twitter"></i></a>
-								<a href=""><i class="bi bi-facebook"></i></a>
-								<a href=""><i class="bi bi-instagram"></i></a>
-								<a href=""><i class="bi bi-linkedin"></i></a>
+								<a href="https://twitter.com/FambiDiel" target="_blank"><i class="bi bi-twitter"></i></a>
+								<a href="https://web.facebook.com/libertydiel" target="_blank"><i class="bi bi-facebook"></i></a>
+								<a href="https://www.instagram.com/dielfambi/" target="_blank"><i class="bi bi-instagram"></i></a>
+								<a href="https://www.linkedin.com/in/liberty-diel-fambi-350840194/" target="_blank"><i class="bi bi-linkedin"></i></a>
 							</div>
 						</div>
 						<div class="member-info">
@@ -504,10 +530,11 @@
 						<div class="member-img">
 							<img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
 							<div class="social">
-								<a href=""><i class="bi bi-twitter"></i></a>
-								<a href=""><i class="bi bi-facebook"></i></a>
-								<a href=""><i class="bi bi-instagram"></i></a>
-								<a href=""><i class="bi bi-linkedin"></i></a>
+								<a href="" target="_blank"><i class="bi bi-twitter"></i></a>
+								<a href="" target="_blank"><i class="bi bi-facebook"></i></a>
+								<a href="" target="_blank"><i class="bi bi-instagram"></i></a>
+								<a href="https://www.linkedin.com/in/farid-abdel-adediran-yessoufou/" target="_blank"><i
+										class="bi bi-linkedin"></i></a>
 							</div>
 						</div>
 						<div class="member-info">
@@ -521,10 +548,10 @@
 						<div class="member-img">
 							<img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
 							<div class="social">
-								<a href=""><i class="bi bi-twitter"></i></a>
-								<a href=""><i class="bi bi-facebook"></i></a>
-								<a href=""><i class="bi bi-instagram"></i></a>
-								<a href=""><i class="bi bi-linkedin"></i></a>
+								<a href="" target="_blank"><i class="bi bi-twitter"></i></a>
+								<a href="" target="_blank"><i class="bi bi-facebook"></i></a>
+								<a href="" target="_blank"><i class="bi bi-instagram"></i></a>
+								<a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
 							</div>
 						</div>
 						<div class="member-info">
@@ -549,8 +576,9 @@
 						<div class="section-title">
 							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Devenir
 								vendeur</span>
-							<h5 class="mb-25 wow fadeInUp" data-wow-delay=".4s"> Nous faisons notre maximum pour vous
-								répondre dans les plus brefs délais. Merci de votre patience! </h5>
+							<h5 class="mb-25 wow fadeInUp" data-wow-delay=".4s"> Contactez nous pour plus de détail sur
+								nos offres. Nous nous ferions un plaisir de vous répondre dans les plus brefs délais.!
+							</h5>
 							<form method="POST">
 								<div class="form-group">
 									<label for="fname">Nom et Prenom</label>
@@ -561,6 +589,11 @@
 									<label for="lname">Email</label>
 									<input type="email" id="lname" name="lastname" class="form-control"
 										placeholder="Ex: example@gmail.com" required>
+								</div>
+								<div class="form-group">
+									<label for="lname">Nom de l'entreprise</label>
+									<input type="text" id="lname" name="lastname" class="form-control"
+										placeholder="Ex: Apple" required>
 								</div>
 								<div class="form-group">
 									<label for="lname">Numero de Telephone</label>
