--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							BlueSide Corp est une entreprise de e-commerce immatriculé au registre du commerce sous le
 							<strong>N°: RCCM RB/COT/21A 69268</strong>. La société offre sa plateforme e-commerce <span
 								style="color: #19CEEB;">BlueSide</span> à tous
-							commerçants désireux de vendre leurs produits en ligne et se faire plus d’argent.
+							commerçants désireux de vendre leurs produits en ligne et se faire plus de bénéfice.
 						</p>
 						<div class="download-btns">
 							<div class="">
@@ -151,8 +151,8 @@
 				<div class="col-xl-12 col-lg-12">
 					<div class="section-title text-center mb-70">
 						<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Nos services</span>
-						<h4 class="wow fadeInUp" data-wow-delay=".4s">Lorem ipsum dolor sit amet consectetur,
-							adipisicing elit.</h4>
+						<h4 class="wow fadeInUp" data-wow-delay=".4s">Découvrez nos
+							servies de qualité conçus pour vous.</h4>
 					</div>
 					<!-- TESTIMONIALS -->
 					<section class="testimonials">
@@ -183,7 +183,7 @@
 													src="https://image.freepik.com/free-photo/dishes-with-healthy-waffles_1220-367.jpg"
 													alt="">
 												<div class="item-details">
-													<h5 style="text-align: center;color:white">MARKETING & IT</h5>
+													<h5 style="text-align: center;color:white">Marketing & IT</h5>
 													<p style="text-align: center;">Bénéficiez de l’expertise en service
 														IT et en Marketing de notre équipe qui vous
 														accompagnera tout au long de votre partenariat avec nous.</p>
@@ -200,7 +200,7 @@
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Stockage</h5>
 													<p style="text-align: center;">Nous vous offrons la possibilité de
-														stocker vos produits avec nous afin de faciliter la livraison
+														stocker vos produits avec nous afin de faciliter la livraison.
 													</p>
 												</div>
 											</div>
@@ -216,7 +216,7 @@
 													<h5 style="text-align: center;color:white">Livraison sécurisé </h5>
 													<p style="text-align: center;">Nous nous occupons de la livraisons
 														et votre produit est traité avec sécurité du point de chargement
-														jusqu’à destination finale</p>
+														jusqu’à destination finale.</p>
 												</div>
 											</div>
 										</div>
@@ -230,7 +230,7 @@
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Publicités </h5>
 													<p style="text-align: center;">Possibilité de faire de la publicité
-														payante pour plus de visibilité sur votre produit</p>
+														payante pour plus de visibilité sur votre produit.</p>
 												</div>
 											</div>
 										</div>
@@ -343,18 +343,18 @@
 							<p class="mb-35 wow fadeInUp" data-wow-delay=".6s">
 								<ul class="list-group list-group-flush">
 									<li class="list-group-item">Nous vous aidons à vendre vos produits plus rapidement
-										grâce à la forte visibilité sur notre site</li>
-									<li class="list-group-item">Premier site de e-commerce au Bénin qui vous garantie
-										des services de qualités</li>
+										grâce à la forte visibilité sur notre site.</li>
+									<li class="list-group-item">Premier site de e-commerce au Bénin qui vous garantit
+										des services de qualité.</li>
 									<li class="list-group-item">Ayez accès à votre propre compte vendeur avec la
-										possibilité de personnaliser gratuitement votre catalogue de produits en ligne
+										possibilité de personnaliser gratuitement votre catalogue de produits en ligne.
 									</li>
 									<li class="list-group-item">Vous avez la liberté de mettre votre meilleur prix sur
-										vos produits</li>
+										vos produits.</li>
 									<li class="list-group-item">Les consommateurs béninois effectuent de plus en plus
-										leur achat en ligne</li>
+										leur achat en ligne.</li>
 									<li class="list-group-item">Surpassez vos concurrents en marquant votre présence sur
-										un grand marché en ligne et augmentez votre chiffre d’affairevotre écoute</li>
+										un grand marché en ligne et augmentez votre chiffre d’affaire votre écoute.</li>
 								</ul>
 							</p>
 						</div>
@@ -382,13 +382,12 @@
 				<div class="col-lg-6">
 					<div class="about-content received-content">
 						<div class="section-title">
-							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Découvrez nos
-								servies de qualité conçus pour vous !
+							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Plus de soucis de livraison!
 							</span>
-							<h1 class="mb-25 wow fadeInUp" data-wow-delay=".4s">Plus de soucis de livraison!</h1>
+							<h1 class="mb-25 wow fadeInUp" data-wow-delay=".4s"></h1>
 							<p class="wow fadeInUp" data-wow-delay=".6s">
 								<ul class="list-group list-group-flush">
-									<li class="list-group-item">Nous livrons vos clients à leur porte.
+									<li class="list-group-item">Nous livrons vos clients à leur porte!
 									</li>
 									<li class="list-group-item">Profitez de notre service logistique qui s’occupe de la
 										sécurité d’une commande jusqu’à sa destination.
@@ -424,7 +423,7 @@
 										d'un produit</span>
 									<li class="list-group-item d-flex justify-content-between align-items-center">
 										À partir de votre compte vendeur, Insérez vos produits dans les catégories qui
-										les correspondent le mieux
+										leur correspondent le mieux
 										<span class="badge badge-primary badge-pill"><input type="checkbox" disabled
 												id="scales" name="scales" checked></span>
 									</li>
@@ -443,7 +442,7 @@
 									<span class="wow fadeInUp" data-wow-delay=".2s"
 										style="color:#19CEEB;">Notification</span>
 									<p>
-										Vous serez notifiez à chaque commande sur votre compte vendeur ou par mail
+										Vous serez notifié  à chaque commande sur votre compte vendeur ou par mail
 										Livraison
 									</p>
 								</ul>
@@ -576,8 +575,7 @@
 						<div class="section-title">
 							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Devenir
 								vendeur</span>
-							<h5 class="mb-25 wow fadeInUp" data-wow-delay=".4s"> Contactez nous pour plus de détail sur
-								nos offres. Nous nous ferions un plaisir de vous répondre dans les plus brefs délais.!
+							<h5 class="mb-25 wow fadeInUp" data-wow-delay=".4s"> Contactez-nous et rejoignez la famille Blue pour plus de détails sur nos offres. Nous nous ferions un plaisir de vous répondre dans les plus bref délais.😊
 							</h5>
 							<form method="POST">
 								<div class="form-group">
