--- a/index.html
+++ b/index.html
@@ -484,8 +484,7 @@
 
 			<div class="section-title">
 				<h2 style="color:#19CEEB; text-align:center; margin: 25px;"> Équipe dirigeante</h2>
-				<p style="margin:20px; text-align:center">Notre équipe conçue de jeunes dynamiques, stratégiques et
-					déterminés vous accompagne pour une bonne collaboration.</p>
+				<p style="margin:20px; text-align:center">Notre équipe organisée, stratégique, et dynamique vous accompagne pour une bonne collaboration !</p>
 			</div>
 			<div class="row">
 				<div class="col-lg-3 col-md-6 d-flex align-items-stretch">
@@ -500,7 +499,7 @@
 							</div>
 						</div>
 						<div class="member-info">
-							<h4>Geoffroy.D SAÏZONOU</h4>
+							<h4>Geoffroy D. SAÏZONOU</h4>
 							<span>Chief Executive Officer</span>
 						</div>
 					</div>
@@ -554,7 +553,7 @@
 							</div>
 						</div>
 						<div class="member-info">
-							<h4>Shukurath BAKARY</h4>
+							<h4>Shukurath A. BAKARY</h4>
 							<span>Responsable Marketing</span>
 						</div>
 					</div>
