--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 													src="https://image.freepik.com/free-photo/spaghetti-with-carbonara-sauce_1216-324.jpg"
 													alt="">
 												<div class="item-details">
-													<h5 style="text-align: center;color:white">Plateforme sécurisé </h5>
+													<h5 style="text-align: center;color:white">Plateforme sécurisée </h5>
 													<p style="text-align: center;">Nous vous offrons une plateforme
 														rapide, efficace et sécurisée
 														où vous pouvez développer votre activité grâce à une série
@@ -213,7 +213,7 @@
 												<img class="img-responsive" src="assets/img/delivery/3333449.jpg"
 													alt="">
 												<div class="item-details">
-													<h5 style="text-align: center;color:white">Livraison sécurisé </h5>
+													<h5 style="text-align: center;color:white">Livraison sécurisée  </h5>
 													<p style="text-align: center;">Nous nous occupons de la livraisons
 														et votre produit est traité avec sécurité du point de chargement
 														jusqu’à destination finale.</p>
