--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
 													src="https://image.freepik.com/free-photo/spaghetti-with-carbonara-sauce_1216-324.jpg"
 													alt="">
 												<div class="item-details">
-													<h5 style="text-align: center;color:white">Plateforme sécurisée </h5>
+													<h5 style="text-align: center;color:white">Plateforme sécurisée
+													</h5>
 													<p style="text-align: center;">Nous vous offrons une plateforme
 														rapide, efficace et sécurisée
 														où vous pouvez développer votre activité grâce à une série
@@ -213,7 +214,7 @@
 												<img class="img-responsive" src="assets/img/delivery/3333449.jpg"
 													alt="">
 												<div class="item-details">
-													<h5 style="text-align: center;color:white">Livraison sécurisée  </h5>
+													<h5 style="text-align: center;color:white">Livraison sécurisée </h5>
 													<p style="text-align: center;">Nous nous occupons de la livraisons
 														et votre produit est traité avec sécurité du point de chargement
 														jusqu’à destination finale.</p>
@@ -361,8 +362,23 @@
 					</div>
 				</div>
 				<div class="col-lg-7 order-first order-lg-last">
-					<div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
+					<!-- <div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
 						<img src="assets/img/delivery/3333449.jpg" alt="">
+					</div> -->
+					<div class="slideshow-container">
+						<div class="mySlides fade delivery-img">
+							<img src="assets/img/delivery/IMG_6397.JPG" height="500" width="500">
+						</div>
+
+						<div class="mySlides fade delivery-img">
+							<img src="assets/img/delivery/IMG_6438.JPG" height="500" width="500">
+						</div>
+					</div>
+					<br>
+					<div style="text-align:center">
+						<span class="dot"></span>
+						<span class="dot"></span>
+						<span class="dot"></span>
 					</div>
 				</div>
 			</div>
@@ -376,13 +392,14 @@
 			<div class="row align-items-center">
 				<div class="col-lg-6">
 					<div class="about-img received-img wow fadeInUp" data-wow-delay=".5s">
-						<img src="assets/img/received/8309.jpg" alt="">
+						<img src="assets/img/received/IMG_6363.JPG" alt="">
 					</div>
 				</div>
 				<div class="col-lg-6">
 					<div class="about-content received-content">
 						<div class="section-title">
-							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Plus de soucis de livraison!
+							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Plus de soucis de
+								livraison!
 							</span>
 							<h1 class="mb-25 wow fadeInUp" data-wow-delay=".4s"></h1>
 							<p class="wow fadeInUp" data-wow-delay=".6s">
@@ -442,7 +459,7 @@
 									<span class="wow fadeInUp" data-wow-delay=".2s"
 										style="color:#19CEEB;">Notification</span>
 									<p>
-										Vous serez notifié  à chaque commande sur votre compte vendeur ou par mail
+										Vous serez notifié à chaque commande sur votre compte vendeur ou par mail
 										Livraison
 									</p>
 								</ul>
@@ -473,7 +490,7 @@
 				</div>
 				<div class="col-lg-7 order-first order-lg-last">
 					<div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
-						<img src="assets/img/delivery/3333449.jpg" alt="">
+						<img src="assets/img/delivery/IMG_6457.JPG" alt="">
 					</div>
 				</div>
 			</div>
@@ -484,7 +501,8 @@
 
 			<div class="section-title">
 				<h2 style="color:#19CEEB; text-align:center; margin: 25px;"> Équipe dirigeante</h2>
-				<p style="margin:20px; text-align:center">Notre équipe organisée, stratégique, et dynamique vous accompagne pour une bonne collaboration !</p>
+				<p style="margin:20px; text-align:center">Notre équipe organisée, stratégique, et dynamique vous
+					accompagne pour une bonne collaboration !</p>
 			</div>
 			<div class="row">
 				<div class="col-lg-3 col-md-6 d-flex align-items-stretch">
@@ -493,8 +511,10 @@
 							<img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
 							<div class="social">
 								<a href="https://twitter.com/geo_szn" target="_blank"><i class="bi bi-twitter"></i></a>
-								<a href="https://web.facebook.com/geoffroy.saizonou/" target="_blank"><i class="bi bi-facebook"></i></a>
-								<a href="https://www.instagram.com/geo_szn/" target="_blank"><i class="bi bi-instagram"></i></a>
+								<a href="https://web.facebook.com/geoffroy.saizonou/" target="_blank"><i
+										class="bi bi-facebook"></i></a>
+								<a href="https://www.instagram.com/geo_szn/" target="_blank"><i
+										class="bi bi-instagram"></i></a>
 								<a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
 							</div>
 						</div>
@@ -510,10 +530,14 @@
 						<div class="member-img">
 							<img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
 							<div class="social">
-								<a href="https://twitter.com/FambiDiel" target="_blank"><i class="bi bi-twitter"></i></a>
-								<a href="https://web.facebook.com/libertydiel" target="_blank"><i class="bi bi-facebook"></i></a>
-								<a href="https://www.instagram.com/dielfambi/" target="_blank"><i class="bi bi-instagram"></i></a>
-								<a href="https://www.linkedin.com/in/liberty-diel-fambi-350840194/" target="_blank"><i class="bi bi-linkedin"></i></a>
+								<a href="https://twitter.com/FambiDiel" target="_blank"><i
+										class="bi bi-twitter"></i></a>
+								<a href="https://web.facebook.com/libertydiel" target="_blank"><i
+										class="bi bi-facebook"></i></a>
+								<a href="https://www.instagram.com/dielfambi/" target="_blank"><i
+										class="bi bi-instagram"></i></a>
+								<a href="https://www.linkedin.com/in/liberty-diel-fambi-350840194/" target="_blank"><i
+										class="bi bi-linkedin"></i></a>
 							</div>
 						</div>
 						<div class="member-info">
@@ -574,7 +598,9 @@
 						<div class="section-title">
 							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Devenir
 								vendeur</span>
-							<h5 class="mb-25 wow fadeInUp" data-wow-delay=".4s"> Contactez-nous et rejoignez la famille Blue pour plus de détails sur nos offres. Nous nous ferions un plaisir de vous répondre dans les plus bref délais.😊
+							<h5 class="mb-25 wow fadeInUp" data-wow-delay=".4s"> Contactez-nous et rejoignez la famille
+								Blue pour plus de détails sur nos offres. Nous nous ferions un plaisir de vous répondre
+								dans les plus bref délais.😊
 							</h5>
 							<form method="POST">
 								<div class="form-group">
