--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <![endif]-->
 
 	<!-- ========================= preloader start ========================= -->
-	<!--div class="preloader">
+	<div class="preloader">
 		<div class="loader">
 			<div class="ytp-spinner">
 				<div class="ytp-spinner-container">
@@ -54,7 +54,7 @@
 				</div>
 			</div>
 		</div>
-	</div-->
+	</div>
 	<!-- preloader end -->
 
 
@@ -365,7 +365,7 @@
 					<!-- <div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
 						<img src="assets/img/delivery/3333449.jpg" alt="">
 					</div> -->
-					<div class="slideshow-container">
+					<!--div class="slideshow-container">
 						<div class="mySlides fade delivery-img">
 							<img src="assets/img/delivery/IMG_6397.JPG" height="500" width="500">
 						</div>
@@ -490,7 +490,7 @@
 				</div>
 				<div class="col-lg-7 order-first order-lg-last">
 					<div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
-						<img src="assets/img/delivery/IMG_6457.JPG" alt="">
+						<!--img src="assets/img/delivery/IMG_6457.JPG" alt=""-->
 					</div>
 				</div>
 			</div>
