--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
 				<div class="col-xl-12 col-lg-12">
 					<div class="section-title text-center mb-70">
 						<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Nos services</span>
-						<h4 class="wow fadeInUp" data-wow-delay=".4s">Découvrez nos
-							servies de qualité conçus pour vous.</h4>
+						<h4 class="wow fadeInUp" data-wow-delay=".4s">Découvrez nos services de qualités conçus pour vous.</h4>
 					</div>
 					<!-- TESTIMONIALS -->
 					<section class="testimonials">
@@ -195,8 +194,8 @@
 										<!--TESTIMONIAL 3 -->
 										<div class="item">
 											<div class="shadow-effect">
-												<img class="img-responsive"
-													src="https://image.freepik.com/free-photo/top-view-of-tasty-noodles-with-prawns_1203-1769.jpg"
+												<img class="img-responsive" height="300" width="200"
+													src="assets/img/delivery/storage.png"
 													alt="">
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Stockage</h5>
@@ -208,19 +207,7 @@
 										</div>
 										<!--END OF TESTIMONIAL 3 -->
 										<!--TESTIMONIAL 4 -->
-										<div class="item">
-											<div class="shadow-effect">
-
-												<img class="img-responsive" src="assets/img/delivery/3333449.jpg"
-													alt="">
-												<div class="item-details">
-													<h5 style="text-align: center;color:white">Livraison sécurisée </h5>
-													<p style="text-align: center;">Nous nous occupons de la livraisons
-														et votre produit est traité avec sécurité du point de chargement
-														jusqu’à destination finale.</p>
-												</div>
-											</div>
-										</div>
+										
 										<!--END OF TESTIMONIAL 4 -->
 										<!--TESTIMONIAL 5 -->
 										<div class="item">
@@ -230,8 +217,19 @@
 													alt="">
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Publicités </h5>
-													<p style="text-align: center;">Possibilité de faire de la publicité
-														payante pour plus de visibilité sur votre produit.</p>
+													<p style="text-align: center;">Service de publicité payante sur nos bannières passantes pour plus de visibilité sur votre produit.</p>
+												</div>
+											</div>
+										</div>
+										<div class="item">
+											<div class="shadow-effect">
+												<img class="img-responsive"  height="300" width="200" src="assets/img/delivery/3333449.jpg"
+													alt="">
+												<div class="item-details">
+													<h5 style="text-align: center;color:white">Livraison sécurisée </h5>
+													<p style="text-align: center;">Nous nous occupons de la livraisons
+														et votre produit est traité avec sécurité du point de chargement
+														jusqu’à destination finale.</p>
 												</div>
 											</div>
 										</div>
@@ -353,9 +351,9 @@
 									<li class="list-group-item">Vous avez la liberté de mettre votre meilleur prix sur
 										vos produits.</li>
 									<li class="list-group-item">Les consommateurs béninois effectuent de plus en plus
-										leur achat en ligne.</li>
+										leurs achats en ligne.</li>
 									<li class="list-group-item">Surpassez vos concurrents en marquant votre présence sur
-										un grand marché en ligne et augmentez votre chiffre d’affaire votre écoute.</li>
+										un grand marché en ligne et augmentez votre chiffre d’affaire.</li>
 								</ul>
 							</p>
 						</div>
@@ -365,7 +363,7 @@
 					<!-- <div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
 						<img src="assets/img/delivery/3333449.jpg" alt="">
 					</div> -->
-					<!--div class="slideshow-container">
+					<div class="slideshow-container">
 						<div class="mySlides fade delivery-img">
 							<img src="assets/img/delivery/IMG_6397.JPG" height="500" width="500">
 						</div>
@@ -460,7 +458,6 @@
 										style="color:#19CEEB;">Notification</span>
 									<p>
 										Vous serez notifié à chaque commande sur votre compte vendeur ou par mail
-										Livraison
 									</p>
 								</ul>
 								<ul class="list-group list-group-flush">
@@ -490,7 +487,7 @@
 				</div>
 				<div class="col-lg-7 order-first order-lg-last">
 					<div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
-						<!--img src="assets/img/delivery/IMG_6457.JPG" alt=""-->
+						<img src="assets/img/delivery/IMG_6457.JPG" alt="">
 					</div>
 				</div>
 			</div>
@@ -599,7 +596,7 @@
 							<span class="wow fadeInUp" data-wow-delay=".2s" style="color: #19CEEB;">Devenir
 								vendeur</span>
 							<h5 class="mb-25 wow fadeInUp" data-wow-delay=".4s"> Contactez-nous et rejoignez la famille
-								Blue pour plus de détails sur nos offres. Nous nous ferions un plaisir de vous répondre
+							 <span style="color: #19CEEB;">BlUE</span> pour plus de détails sur nos offres. Nous nous ferions un plaisir de vous répondre
 								dans les plus bref délais.😊
 							</h5>
 							<form method="POST">
