--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 				</div>
 				<div class="col-lg-7 order-first order-lg-last">
 					<div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
-						<img src="assets/img/delivery/IMG_6457.JPG" alt="">
+						<img src="assets/img/delivery/IMG_6457.jpg" alt="">
 					</div>
 				</div>
 			</div>
