--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 				</div>
 			</div>
 		</div>
-	</!--section-->
+	</section-->
 	<section id="how" class="delivery-section pt-150">
 		<div class="container">
 			<div class="row align-items-center">
