--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 										<div class="item">
 											<div class="shadow-effect">
 												<img class="img-responsive"
-													src="https://image.freepik.com/free-photo/spaghetti-with-carbonara-sauce_1216-324.jpg"
-													alt="">
+													src="assets/img/delivery/auth.jpeg"
+													alt="" height="300" width="200">
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Plateforme sécurisée
 													</h5>
@@ -180,8 +180,8 @@
 										<div class="item">
 											<div class="shadow-effect">
 												<img class="img-responsive"
-													src="https://image.freepik.com/free-photo/dishes-with-healthy-waffles_1220-367.jpg"
-													alt="">
+													src="assets/img/delivery/it.jpeg"
+													alt="" height="300" width="200">
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Marketing & IT</h5>
 													<p style="text-align: center;">Bénéficiez de l’expertise en service
@@ -195,7 +195,7 @@
 										<div class="item">
 											<div class="shadow-effect">
 												<img class="img-responsive" height="300" width="200"
-													src="assets/img/delivery/storage.png"
+													src="assets/img/delivery/storage.jpeg"
 													alt="">
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Stockage</h5>
@@ -213,7 +213,7 @@
 										<div class="item">
 											<div class="shadow-effect">
 												<img class="img-responsive"
-													src="https://image.freepik.com/free-photo/delicious-pastry-with-chicken_1203-1616.jpg"
+													src="assets/img/delivery/pub.jpeg" height="300" width="200"
 													alt="">
 												<div class="item-details">
 													<h5 style="text-align: center;color:white">Publicités </h5>
@@ -330,7 +330,7 @@
 				</div>
 			</div>
 		</div>
-	</section-->
+	</!--section-->
 	<section id="how" class="delivery-section pt-150">
 		<div class="container">
 			<div class="row align-items-center">
@@ -487,7 +487,7 @@
 				</div>
 				<div class="col-lg-7 order-first order-lg-last">
 					<div class="delivery-img wow fadeInUp" data-wow-delay=".5s">
-						<img src="assets/img/delivery/IMG_6457.jpg" alt="">
+						<img src="assets/img/delivery/IMG_6457.JPG" alt="">
 					</div>
 				</div>
 			</div>
